--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,8 +38,86 @@
     // ImageView's content description
     <string name="content_description_app_logo_splash_screen_fragment">App Logo Splash Screen Fragment</string>
     <string name="content_description_no_internet_connection_image_splash_screen_fragment">No internet connection image Splash Screen Fragment</string>
+    <string name="content_description_sharedPref_error_image_splash_screen_fragment">Sorry…Please restart the app image Splash Screen Fragment</string>
 
     // Strings
     <string name="string_no_internet_connection_splash_screen_fragment">No internet connection</string>
+    <string name="string_sharedPref_error_splash_screen_fragment">Sorry…Please restart the app</string>
 
+    // EmailInputScreenFragment
+    // ***
+    // Strings
+    <string name="hint_et_email_input_email_input_screen_fragment">Enter your email</string>
+    <string name="text_btn_next_email_input_screen_fragment">Next</string>
+
+    // PasswordInputScreenFragment
+    // ***
+    // Strings
+    <string name="hint_et_password_input_password_input_screen_fragment">Enter Password</string>
+    <string name="text_btn_submit_password_input_screen_fragment">Submit</string>
+    <string name="text_btn_forgot_password_input_screen_fragment">Forgot Password?</string>
+
+    // OtpInputScreenFragment
+    // ***
+    // Strings
+    <string name="hint_et_otp_input_otp_input_screen_fragment">Enter OTP</string>
+    <string name="text_btn_submit_otp_input_screen_fragment">Submit</string>
+    <string name="text_btn_change_email_otp_input_screen_fragment">Change Email?</string>
+
+    // ChangePassScreenFragment
+    // ***
+    // Strings
+    <string name="hint_et_new_password_change_pass_screen_fragment">Enter your new password</string>
+    <string name="hint_et_confirm_password_change_pass_screen_fragment">Confirm new password</string>
+    <string name="text_btn_submit_change_pass_screen_fragment">Submit</string>
+
+    // UserDetailsInputScreenFragment
+    // ***
+    // Strings
+    <string name="hint_et_first_name_user_details_input_screen_fragment">Enter your first name</string>
+    <string name="hint_et_last_name_user_details_input_screen_fragment">Enter your last name</string>
+    <string name="hint_et_password_user_details_input_screen_fragment">Enter your password</string>
+    <string name="hint_et_confirm_password_user_details_input_screen_fragment">Confirm your password</string>
+    <string name="text_btn_submit_user_details_input_screen_fragment">Submit</string>
+
+    // HomeScreenFragment
+    // ***
+    // Strings
+
+    // ViewPoemScreenFragment
+    // ***
+    // Strings
+
+
+    // Bottom Navigation Main Content
+    // ***
+    // Strings
+    <string name="content_description_home_screen_fragment_bottom_nav_main_content_menu">Home</string>
+    <string name="title_home_screen_fragment_bottom_nav_main_content_menu">Home</string>
+    <string name="content_description_search_screen_fragment_bottom_nav_main_content_menu">Search</string>
+    <string name="title_search_screen_fragment_bottom_nav_main_content_menu">Search</string>
+    <string name="content_description_new_poem_screen_fragment_bottom_nav_main_content_menu">Add New Poem</string>
+    <string name="title_new_poem_screen_fragment_bottom_nav_main_content_menu">Add New Poem</string>
+    <string name="content_description_profile_screen_fragment_bottom_nav_main_content_menu">Profile</string>
+    <string name="title_profile_screen_fragment_bottom_nav_main_content_menu">Profile</string>
+
+    // Tool Bar Main Content Activity
+    // ***
+    // Strings
+    <string name="title_about_us_screen_fragment_tool_bar_main_content_menu">About Us</string>
+    <string name="content_description_about_us_screen_fragment_tool_bar_main_content_menu">About Us</string>
+    <string name="title_logout_tool_bar_main_content_menu">Logout</string>
+    <string name="content_description_logout_tool_bar_main_content_menu">Logout</string>
+    <string name="title_delete_edit_poem_screen_fragment_tool_bar_view_poem_screen_fragment">Delete</string>
+    <string name="content_description_delete_edit_poem_screen_fragment_tool_bar_view_poem_screen_fragment">Delete</string>
+    <string name="title_edit_poem_screen_fragment_tool_bar_view_poem_screen_fragment">Edit</string>
+    <string name="content_description_edit_poem_screen_fragment_tool_bar_view_poem_screen_fragment">Edit</string>
+    <string name="content_description_edit_title_tool_bar_edit_poem_screen_fragment">Edit Title</string>
+    <string name="title_edit_title_tool_bar_edit_poem_screen_fragment">Edit Title</string>
+    <string name="content_description_edit_genre_tool_bar_edit_poem_screen_fragment">Edit Genre</string>
+    <string name="title_edit_genre_tool_bar_edit_poem_screen_fragment">Edit Genre</string>
+    <string name="extended_fab_label_edit_poem_screen_fragment">Suggestions</string>
+
+
+    <string name="insert">Insert</string>
 </resources>
